# trabajo-practico-ss

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/routers/: health.py
app/services/analisis/: acoustic_parameters.py
app/services/generacion/: pink_noise.py  sine_sweep.py
app/services/procesamiento/: filter.py  signal_utils.py
docs/mediciones/: sala_ejemplos.md
docs/teoria/: iso_3382.md  parametros.md
template_repo/: README.md
